<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elite_teleop</name>
  <version>0.1.0</version>
  <description>Xbox Elite controller teleop for cmd_vel</description>
  <maintainer email="noelinnocent369@gmail.com">noel</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
